<resources>
    <string name="app_name"><u>ExspressTask</u></string>
    <string name="incomings"><u>Incomings</u></string>
    <string name="cashback"><u>Cashback</u></string>
    <string name="expences"><u>Expences</u></string>
    <string name="category_text"><u>Category text</u></string>
    <string name="azn_month"><u>Azn/month</u></string>
    <string name="percentage"><u>Percentage</u></string>
    <string name="view_statement"><u>View statement</u></string>

    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
    </string-array>

    <string-array name="year">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
</resources>