<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E3E0E0"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_back"
            android:padding="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Stats"
            android:textColor="#231F20"
            android:textSize="18dp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_underthescroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:divider="@drawable/empty_divider"
            app:showDividers="middle">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                app:cardCornerRadius="7dp"
                >
                <Spinner
                    android:id="@+id/creditCard"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/black"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_marginRight="15dp"
                    app:cardCornerRadius="7dp"
                    >
                    <Spinner
                        android:id="@+id/year"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/black"/>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="7dp"
                    >
                    <Spinner
                        android:id="@+id/month"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/black"/>
                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="25dp"
                    app:divider="@drawable/empty_divider"
                    app:showDividers="middle">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/expencesValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="1 300 000"
                                android:textColor="#231F20"
                                android:textSize="18dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/expencesValue"
                                android:layout_centerHorizontal="true"
                                android:text="@string/expences"
                                android:textColor="#F58220"
                                android:textSize="12dp" />


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/incomingsValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="1 700 000"
                                android:textColor="#231F20"
                                android:textSize="18dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/incomingsValue"
                                android:layout_centerHorizontal="true"
                                android:text="@string/incomings"
                                android:textColor="#F58220"
                                android:textSize="12dp" />


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/cashbackValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="100 500"
                                android:textColor="#231F20"
                                android:textSize="18dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/cashbackValue"
                                android:layout_centerHorizontal="true"
                                android:text="@string/cashback"
                                android:textColor="#F58220"
                                android:textSize="12dp" />


                        </RelativeLayout>
                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/pie_chart"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:layout_gravity="center" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:translationZ="1dp">

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:id="@+id/pieChart_category"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Transport"
                                    android:textColor="#231F20"
                                    android:textSize="18dp" />
                                <TextView
                                    android:id="@+id/pieChart_percentage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="26%"
                                    android:paddingLeft="5dp"
                                    android:textColor="#231F20"
                                    android:textSize="18dp" />
                            </androidx.appcompat.widget.LinearLayoutCompat>


                            <TextView
                                android:id="@+id/pieChart_profit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1 500"
                                android:textColor="#231F20"
                                android:textSize="48dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="AZN / month"
                                android:textColor="#231F20"
                                android:textSize="16dp" />

                            <TextView
                                android:id="@+id/pieChart_viewStatement"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/view_statement"
                                android:textColor="#231F20"
                                android:textSize="16dp" />

                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </RelativeLayout>




                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Categories"
                        android:textColor="#000000"
                        android:textSize="16dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mainRecyc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>




</RelativeLayout>
